// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigationSubMenu > should render a button 1`] = `
<div>
  <li
    class="_listItem_906789"
  >
    <button
      class="_button_906789 text-large"
      type="button"
    >
      root label
    </button>
  </li>
</div>
`;

exports[`navigationSubMenu > should render a button 2`] = `
<div>
  <li
    class="_listItem_906789"
  >
    <button
      class="_button_906789 text-large"
      type="button"
    >
      root label
    </button>
    <ul
      class="_list_906789"
    >
      <li
        class="_navItem_16c685"
      >
        <a
          class="_link_16c685 text-large"
          href="/specific/page"
        >
          specific page
        </a>
      </li>
      <li
        class="_navItem_16c685"
      >
        <a
          class="_link_16c685 text-large"
          href="/"
        >
          homepage
        </a>
      </li>
      <li
        class="_navItem_16c685"
      >
        <a
          class="_link_16c685 text-large"
          href="https://example.com"
        >
          external
        </a>
      </li>
    </ul>
    <div
      class="_arrow_906789"
    />
  </li>
</div>
`;
